deployment_files/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: showstrackerapi-service
  labels:
    run: showstrackerapi-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: showstrackerapi
